# smmo-api

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
src/: client.rs  lib.rs  smmo_player.rs  world_boss.rs
src/custom_serde/: bool_from_int.rs  bool_from_int_str.rs  date_time_option.rs  empty_string_option.rs  mod.rs  ok_or_default.rs
src/models/: item.rs  mod.rs  orphanage.rs  smmo_player.rs  world_boss.rs
