[package]
name = "smmo-api"
version = "0.1.0"
authors = ["Ben Luelo <benluelo@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/benluelo/smmo-api"
homepage = "https://github.com/benluelo/smmo-api"
readme = "README.md"
description = "A simple wrapper around the simple-mmo api (https://web.simple-mmo.com/p-api/home)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.62"
log = { version = "0.4.14", optional = true }
dotenv = { version = "0.15.0", optional = true }
tokio = "1.2.0"
reqwest = { version = "0.11.2", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }

[features]
default = ["logging"]
env = ["dotenv"]
logging = ["log"]
